Settings: Add Runtime Rounded Corner preferences
Change-Id: I6dd7b0c3b8fce13c738f2239ba5504b14d1cc568
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>

--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -65,6 +65,26 @@
     </PreferenceCategory>
 
     <PreferenceCategory 
+
+	    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="sysui_rounded_size"
+            android:title="@string/corner_radius"
+            android:max="25"
+            android:min="0"
+            settings:units=""
+            android:persistent="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="sysui_rounded_content_padding"
+            android:title="@string/content_padding"
+            android:max="10"
+            settings:min="0"
+            settings:units=""
+            android:persistent="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory 
         android:key="dashboard_category" 
         android:title="@string/dashboard_category"> 
  
