--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -539,4 +539,8 @@
     <string name="volte_icon_title">VoLTE icon</string>
     <string name="volte_icon_summary">Display VoLTE icon in statusbar</string>
 
+    <!-- Rounded corners -->
+    <string name="corner_radius">Rounded Corner Radius</string>
+    <string name="content_padding">Corner Content Padding</string>
+
 </resources>
