--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -32,6 +32,13 @@
             android:key="accent_picker"
             android:title="@string/theme_accent_picker_title" />
 
+           <ListPreference
+            android:key="qs_header_style"
+            android:title="@string/qs_header_style_title"
+            android:persistent="false"
+            android:entries="@array/qs_header_style_entries"
+            android:entryValues="@array/qs_header_style_values" />
+
         <ListPreference
             android:key="qs_tile_style"
             android:title="@string/qs_tile_style_title"
@@ -64,7 +71,7 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory 
+    <PreferenceCategory>
 
 	    <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="sysui_rounded_size"
