Add Lockscreen Date & Clock Sizes [2/2]

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -551,4 +551,8 @@
     <string name="qs_header_accent">Accent Based</string>
     <string name="qs_header_transparent">Transparent</string>
 
+    <!-- Lock Clock & Date Size -->
+    <string name="lockdate_font_size_title">Date font size</string>
+    <string name="lockclock_font_size_title">Clock font size</string>
+
 </resources>
