--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -116,4 +116,24 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory>
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="lockclock_font_size"
+            android:title="@string/lockclock_font_size_title"
+            android:max="120"
+            android:min="50"
+            android:persistent="false"
+            android:defaultValue="64" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="lockdate_font_size"
+            android:title="@string/lockdate_font_size_title"
+            android:max="40"
+            android:min="10"
+            android:defaultValue="16"
+            android:persistent="false" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
