--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -96,6 +96,12 @@
         android:defaultValue="true" />
 
     <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+        android:key="qs_show_drag_handle"
+        android:title="@string/tuner_show_drag_handle_title"
+        android:summary="@string/tuner_show_drag_handle_summary"
+        android:defaultValue="true" />
+
+    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
         android:key="qs_show_secure"
         android:title="@string/qs_footer_warnings_title"
         android:summary="@string/qs_footer_warnings_summary"
