--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -29,14 +29,11 @@
             android:summary="@string/sensor_block_summary"
             android:defaultValue="false" />
 
-        <Preference
-            android:key="app_ops_settings"
-            android:title="@string/app_ops_settings_title"
-            android:summary="@string/app_ops_settings_summary" >
-            <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.settings"
-                android:targetClass="com.android.settings.applications.appops.AppOpsSummary" />
-        </Preference>
+	<Preference
+        android:key="privacy_guard_manager"
+        android:fragment="com.android.settings.privacyguard.PrivacyGuardManager"
+        android:title="@string/app_ops_settings_title"
+        android:summary="@string/app_ops_settings_summary" />
 
     <PreferenceCategory
         android:key="navigation_burnin"
