--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -518,13 +518,18 @@
         <item>@string/qstile_dottedcircle</item>
         <item>@string/qstile_circle_dualtone</item>
         <item>@string/qstile_dual_tone_circle</item>
+        <item>@string/qstile_ink</item>
+        <item>@string/qstile_inkdrop</item>
         <item>@string/qstile_mountain</item>
         <item>@string/qstile_ninja</item>
         <item>@string/qstile_oreo</item>
         <item>@string/qstile_oreo_circle_trim</item>
         <item>@string/qstile_oreo_squircle_trim</item>
         <item>@string/qstile_pokesign</item>
+        <item>@string/qstile_squaremedo</item>
+        <item>@string/qstile_squircle</item>
         <item>@string/qstile_squircle_trim</item>
+        <item>@string/qstile_teardrop</item>
         <item>@string/qstile_wavey</item>
     </string-array>
     <string-array name="qs_selector_values" translatable="false">
@@ -542,6 +547,11 @@
         <item>11</item>
         <item>12</item>
         <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
     </string-array>
 
     <!-- Network Traffic Type -->
