--- a/res/xml/ion_settings_buttons.xml
+++ b/res/xml/ion_settings_buttons.xml
@@ -53,6 +53,14 @@
             android:title="@string/volume_rocker_wake_title"
             android:defaultValue="false"/>
 
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="volume_dialog_timeout"
+            android:title="@string/volume_dialog_timeout_title"
+            android:defaultValue="3000"
+            android:max="10000"
+            settings:min="500"
+            settings:interval="100"
+            settings:units="ms"/>
     </PreferenceCategory>
 
     <PreferenceCategory
