--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -26,6 +26,12 @@
         android:fragment="com.ion.ionizer.fragments.HeadsUpSettings"
         android:defaultValue="true" />
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="notification_guts_kill_app_button"
+        android:title="@string/notification_guts_kill_app_button_title"
+        android:summary="@string/notification_guts_kill_app_button_summary"
+        android:defaultValue="false" />
+
     <PreferenceCategory
         android:key="incall_vib_options"
         android:title="@string/incall_vibration_category">
