--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -563,4 +563,8 @@
     <string name="tuner_show_drag_handle_title">Drag handle</string>
     <string name="tuner_show_drag_handle_summary">Shows a drag handle at the bottom of QS</string>
 
+    <!-- Notification guts kill app button -->
+    <string name="notification_guts_kill_app_button_title">Kill app button</string>
+    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
+
 </resources>
