--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -725,7 +725,9 @@
 
     <!-- AOSP Recents component Style -->
     <string name="recents_component_type_title">Recents Style</string>
-    <string name="recents_pie">Pie</string>
-    <string name="recents_oreo">Oreo</string>
+    <string name="recents_quickstep">Quickstep</string>
+    <string name="recents_stock">Stock</string>
+    <string name="recents_grid">Grid</string>
+    <string name="recents_go">Android Go</string>
 
 </resources>
