--- a/res/xml/ion_settings_misc.xml
+++ b/res/xml/ion_settings_misc.xml
@@ -84,4 +84,21 @@
             settings:interval="30"
             settings:units="sec" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="alternative_recents_category"
+        android:title="@string/alternative_recents_category">
+
+    <Preference
+        android:key="swipe_up_enabled_warning"
+        android:selectable="false"
+        android:summary="@string/alternative_recents_swipe_up_enabled_warning_summary" />
+
+    <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
+        android:key="use_slim_recents"
+        android:fragment="com.ion.ionizer.fragments.SlimRecents"
+        android:title="@string/slim_recents_fragment_title"
+        android:summary="@string/slim_recents_fragment_summary"/>
+
+    </PreferenceCategory>
 </PreferenceScreen>
