Add slim recents settings
@SKULSHADY: Cleanup, fixes and adapt for SettingsPreferenceFragment

Change-Id: I3b0f15363dfcf3ccf6d2d5328393ba1690b6a9c9

--- a/res/xml/ion_settings_recents.xml
+++ b/res/xml/ion_settings_recents.xml
@@ -26,6 +26,24 @@
         android:defaultValue="0"
         android:entryValues="@array/recents_type_title_values"/>
 
+    <PreferenceCategory
+        android:key="slim_recents_category"
+        android:title="@string/slim_recents_title">
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="use_slim_recents"
+            android:title="@string/slim_recents_title"
+            android:summary="@string/slim_recents_summary"
+            android:defaultValue="false" />
+
+        <PreferenceScreen
+            android:key="slim_recents_fragment"
+            android:fragment="com.ion.ionizer.fragments.SlimRecents"
+            android:title="@string/slim_recents_fragment_title"
+            android:summary="@string/slim_recents_fragment_summary"
+            android:dependency="use_slim_recents" />
+    </PreferenceCategory>
+
     <Preference
         android:key="hide_app_from_recents"
         android:title="@string/hide_apps_from_recents_title"
