Adapt slim recents to our recents style

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -730,6 +730,7 @@
     <string name="recents_stock">Stock</string>
     <string name="recents_grid">Grid</string>
     <string name="recents_go">Android Go</string>
+    <string name="recents_slim">Slim</string>
 
     <!-- Slim recents -->
     <string name="slim_recents_title">Slim Recents</string>
