--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -716,6 +716,7 @@
         <item>@string/recents_stock</item>
         <item>@string/recents_grid</item>
         <item>@string/recents_go</item>
+        <item>@string/recents_slim</item>
     </string-array>
 
     <string-array name="recents_type_title_values" translatable="false">
@@ -723,6 +724,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <!-- Slim recents -->
