Network traffic location [2/2]

--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -37,26 +37,20 @@
             android:title="@string/status_bar_clock_title"
             android:summary="@string/status_bar_clock_summary" />
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="network_traffic_state"
+        <ListPreference
+            android:key="network_traffic_location"
             android:title="@string/network_traffic_state_title"
-            android:summary="@string/network_traffic_state_summary"
-            android:defaultValue="false" />
+            android:summary="%s"
+            android:entries="@array/network_traffic_location_entries"
+            android:entryValues="@array/network_traffic_location_values"
+            android:persistent="false" />
 
         <ListPreference
             android:key="network_traffic_type"
             android:title="@string/network_traffic_type"
             android:entries="@array/show_network_traffic_type_entries"
             android:entryValues="@array/show_network_traffic_type_values"
-            android:dependency="network_traffic_state"
             android:persistent="false" />
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="network_traffic_hidearrow"
-            android:title="@string/network_traffic_hidearrow"
-            android:summary="@string/network_traffic_hidearrow_summary"
-            android:dependency="network_traffic_state"
-            android:defaultValue="false" />
 
         <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="network_traffic_autohide_threshold"
@@ -64,6 +58,12 @@
             android:max="10"
             android:min="0"
             android:defaultValue="1" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="network_traffic_hidearrow"
+            android:title="@string/network_traffic_hidearrow"
+            android:summary="@string/network_traffic_hidearrow_summary"
+            android:defaultValue="true" />
 
         <Preference
             android:key="carrierlabel_settings"
