Cleanup QS rows & columns count

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -334,7 +334,7 @@
     <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
     <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
 
-    <string name="sysui_qqs_count_title">Small tiles</string>	
+    <string name="sysui_qqs_count_title">Columns (Quickbar)</string>
 
     <!-- CPU info -->
     <string name="show_cpu_info">Show CPU info</string>
