--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -32,7 +32,7 @@
             android:key="accent_picker"
             android:title="@string/theme_accent_picker_title" />
 
-           <ListPreference
+        <ListPreference
             android:key="qs_header_style"
             android:title="@string/qs_header_style_title"
             android:persistent="false"
@@ -45,6 +45,13 @@
             android:persistent="false"
             android:entries="@array/qs_selector_entries"
             android:entryValues="@array/qs_selector_values" />
+
+        <ListPreference
+            android:key="switch_style"
+            android:title="@string/switch_style_title"
+            android:persistent="false"
+            android:entries="@array/switch_style_entries"
+            android:entryValues="@array/switch_style_values" />
 
     </PreferenceCategory>
 
