--- a/res/xml/visualizer_settings.xml
+++ b/res/xml/visualizer_settings.xml
@@ -74,4 +74,10 @@
             settings:min="0"
             settings:interval="5"/>
     </PreferenceCategory>
+
+    <com.ion.ionizer.preferences.SecureSettingSwitchPreference
+        android:key="ambient_visualizer"
+        android:title="@string/ambient_visualizer_title"
+        android:summary="@string/ambient_visualizer_summary"
+        android:defaultValue="false" />
 </PreferenceScreen>
