--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -134,6 +134,14 @@
             android:summary="@string/lockscreen_clock_summary"
             android:defaultValue="true" />
 
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="lockscreen_clock_selection"
+            android:title="@string/lockscreen_clock_selection_title"
+            android:entries="@array/lockscreen_clock_selection_entries"
+            android:entryValues="@array/lockscreen_clock_selection_values"
+            android:dependency="lockscreen_clock"
+            android:defaultValue="0" />
+
         <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="lockclock_font_size"
             android:title="@string/lockclock_font_size_title"
