Edit Icon Toggle [2/2]
aex edits:-
Adapt for oreo

Adds toggle for quick tiles edit

Change-Id: I68e1b5455a173fbdc790684c61037c25f61fa29f
Signed-off-by: Joe Maples <joe@frap129.org>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -583,4 +583,7 @@
     <string name="audio_panel_view_voice_title">Voice</string>
     <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
 
+    <string name="qs_edit_title">Edit icon</string>
+    <string name="qs_edit_summary">Display the tile edit icon in quick settings footer</string>
+
 </resources>
