--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -120,4 +120,10 @@
         android:summary="@string/qs_footer_services_summary"
         android:defaultValue="false" />
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="qs_edit_toggle"
+        android:title="@string/qs_edit_title"
+        android:summary="@string/qs_edit_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
