--- a/res/xml/ion_settings.xml
+++ b/res/xml/ion_settings.xml
@@ -39,7 +39,7 @@
             android:fragment="com.ion.ionizer.fragments.Interface"
             android:icon="@drawable/ic_settings_int"/>
 
-        <!-- Display -->
+        <!-- Ambient Display -->
         <Preference
             android:key="ambient_display"
             android:title="@string/display_title"
@@ -58,6 +58,7 @@
         <Preference
             android:key="navigation_category"
             android:title="@string/navigation_title" 
+            android:summary="@string/navigation_summary"
             android:fragment="com.ion.ionizer.fragments.Navigation"
             android:icon="@drawable/ic_settings_navigation"/>
 
