--- a/res/xml/ion_settings_navigation.xml
+++ b/res/xml/ion_settings_navigation.xml
@@ -18,9 +18,12 @@
     android:title="@string/navigation_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
 
-    <PreferenceScreen
-        android:key="gestures"
-        android:fragment="com.ion.ionizer.fragments.Gestures"
-        android:title="@string/gestures_title" />
+    <Preference
+        android:key="gesture_settings"
+        android:title="@string/gesture_preference_title"
+        android:icon="@drawable/ic_settings_gestures"
+        android:summary="@string/gestures_summary"
+        android:fragment="com.android.settings.gestures.GestureSettings"
+        settings:controller="com.android.settings.gestures.GesturesSettingPreferenceController"/>
 
 </PreferenceScreen>
