--- a/res/xml/ion_settings_buttons.xml
+++ b/res/xml/ion_settings_buttons.xml
@@ -36,4 +36,9 @@
         android:summary="@string/volume_rocker_wake_summary"
         android:title="@string/volume_rocker_wake_title"
         android:defaultValue="false"/>
+
+    <Preference
+        android:key="power_menu"
+        android:title="@string/powermenu_title"
+        android:fragment="com.ion.ionizer.fragments.PowerMenu" />
 </PreferenceScreen>
