temp fix for bottom Brightness slider

--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -22,8 +22,7 @@
             android:key="qs_brightness_position_bottom"
             android:title="@string/qs_brightness_position_bottom_title"
             android:summary="@string/qs_brightness_position_bottom_summary"
-            android:defaultValue="false"
-            android:dependency="qs_show_brightness_slider" />
+            android:defaultValue="false" />
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference 
             android:key="qs_tile_title_visibility" 
