--- a/res/xml/ion_settings.xml
+++ b/res/xml/ion_settings.xml
@@ -16,7 +16,8 @@
 <PreferenceScreen 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/ionizer_title" >
+    android:title="@string/ionizer_title"
+    settings:initialExpandedChildrenCount="8" >
 
         <!-- Status Bar -->
         <Preference
