--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -74,6 +74,7 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory>
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference  
         android:key="fp_unlock_keystore" 
         android:title="@string/fp_unlock_keystore_title" 
@@ -86,4 +87,19 @@
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
     </Preference>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="weather_lockscreen_key"
+        android:title="@string/weather_title"
+        settings:controller="com.android.settings.security.screenlock.WeatherPreferenceController">
+        <com.android.settings.custom.preference.SystemSettingListPreference
+            android:key="weather_lockscreen_unit"
+            android:dialogTitle="@string/weather_unit"
+            android:title="@string/weather_unit"
+            android:summary="%s"
+            android:entries="@array/weather_unit_entries"
+            android:entryValues="@array/weather_unit_values"
+            android:defaultValue="0" />
+    </PreferenceCategory>
 </PreferenceScreen>
