--- a/res/xml/ion_settings.xml
+++ b/res/xml/ion_settings.xml
@@ -48,6 +48,13 @@
             android:fragment="com.android.settings.display.AmbientDisplaySettings"
             android:icon="@drawable/ic_settings_screen"/>
 
+        <!-- Display -->
+        <Preference
+            android:key="display_category"
+            android:title="@string/display_title"
+            android:fragment="com.ion.ionizer.fragments.Display"
+            android:icon="@drawable/ic_settings_screen"/>
+
         <!-- Buttons -->
         <Preference
             android:key="buttons_category"
