--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -18,6 +18,21 @@
     android:title="@string/interface_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:key="theme_category"
+        android:title="@string/theme_category_title">
+
+    <ListPreference
+        android:key="systemui_theme"
+        android:title="@string/device_theme"
+        android:entries="@array/systemui_theme_entries"
+        android:entryValues="@array/systemui_theme_values" />
+
+        <Preference
+            android:key="accent_picker"
+            android:title="@string/theme_accent_picker_title" />
+    </PreferenceCategory >
+
     <PreferenceCategory>
 
 	    <Preference
